[build-system]
requires = ["setuptools>=68.0", "wheel", "cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nexaflow"
version = "1.0.0"
description = "A NexaFlow-like cryptocurrency implemented in Python with Cython optimization"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "NexaFlow Contributors"},
]
keywords = ["cryptocurrency", "blockchain", "nexaflow", "consensus", "cython"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "ecdsa>=0.18.0",
    "aiohttp>=3.9.0",
    "tomli>=2.0.0;python_version<'3.11'",
]

[project.optional-dependencies]
gui = [
    "PyQt6>=6.5.0",
]
dev = [
    "cython>=3.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
    "mypy>=1.5",
    "ruff>=0.1.0",
]

[project.scripts]
nexaflow-node = "run_node:main_sync"

[project.gui-scripts]
nexaflow-gui = "nexaflow_gui.main_window:main"

[project.urls]
Homepage = "https://github.com/nexaflow/nexaflow"
Repository = "https://github.com/nexaflow/nexaflow"
Issues = "https://github.com/nexaflow/nexaflow/issues"
Changelog = "https://github.com/nexaflow/nexaflow/blob/main/CHANGELOG.md"

# ── Tool configuration ──────────────────────────────────────

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = ["build", "dist"]

[tool.ruff]
target-version = "py39"
line-length = 100
exclude = ["build", "dist", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "SIM108", # use ternary — sometimes less readable
]

[tool.ruff.lint.isort]
known-first-party = ["nexaflow_core", "nexaflow_gui"]

[tool.coverage.run]
source = ["nexaflow_core"]
omit = ["tests/*", "benchmarks/*"]

[tool.coverage.report]
show_missing = true
skip_empty = true
fail_under = 70
